# pvr.demo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  kodi-pvr-demo.install  rules
pvr.demo/: PVRDemoAddonSettings.xml  README.md  addon.xml  addon.xml.in  changelog.txt
pvr.demo/resources/: instance-settings.xml
pvr.demo/resources/language/resource.language.af_za/: strings.po
pvr.demo/resources/language/resource.language.am_et/: strings.po
pvr.demo/resources/language/resource.language.ar_sa/: strings.po
pvr.demo/resources/language/resource.language.ast_es/: strings.po
pvr.demo/resources/language/resource.language.az_az/: strings.po
pvr.demo/resources/language/resource.language.be_by/: strings.po
pvr.demo/resources/language/resource.language.bg_bg/: strings.po
pvr.demo/resources/language/resource.language.bs_ba/: strings.po
pvr.demo/resources/language/resource.language.ca_es/: strings.po
pvr.demo/resources/language/resource.language.cs_cz/: strings.po
pvr.demo/resources/language/resource.language.cy_gb/: strings.po
pvr.demo/resources/language/resource.language.da_dk/: strings.po
pvr.demo/resources/language/resource.language.de_de/: strings.po
pvr.demo/resources/language/resource.language.el_gr/: strings.po
pvr.demo/resources/language/resource.language.en_au/: strings.po
src/: PVRDemo.cpp  PVRDemo.h  PVRDemoData.cpp  PVRDemoData.h  addon.cpp  addon.h  client.cpp  client.h
(+59 files in other folders)
